internal/gatewayapi/testdata/httproute-using-extension.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.envoyproxy.io"
      allowedRoutes:
        namespaces:
          from: All
  status:
    listeners:
    - name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      attachedRoutes: 1
      conditions:
      - type: Programmed
        status: "True"
        reason: Programmed
        message: Listener is ready
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    hostnames:
    - gateway.envoyproxy.io
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http
    rules:
    - matches:
      - path:
          value: "/"
      backendRefs:
      - name: service-1
        port: 8080
      filters:
      - type: ExtensionRef
        extensionRef:
          group: foo.example.io
          kind: Bar
          name: baz

  status:
    parents:
    - parentRef:
        namespace: envoy-gateway
        name: gateway-1
        sectionName: http
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      conditions:
      - type: Accepted
        status: "True"
        reason: Accepted
        message: Route is accepted
xdsIR:
  envoy-gateway-gateway-1:
    http:
    - name: envoy-gateway-gateway-1-http
      address: 0.0.0.0
      port: 10080
      hostnames:
      - "*.envoyproxy.io"
      routes:
      - name: default-httproute-1-rule-0-match-0-gateway.envoyproxy.io
        pathMatch:
          prefix: "/"
        headerMatches:
        - name: ":authority"
          exact: gateway.envoyproxy.io
        destinations:
        - host: 7.7.7.7
          port: 8080
          weight: 1
        extensions:
          extensionId: foo
          extensionRefs:
          - group: foo.example.io
            kind: Bar
            name: baz
infraIR:
  envoy-gateway-gateway-1:
    proxy:
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
      name: envoy-gateway-gateway-1
      image: envoyproxy/envoy:translator-tests
      listeners:
      - address: ""
        ports:
        - name: http
          protocol: "HTTP"
          containerPort: 10080
          servicePort: 80
